Change dist ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Net-DNS-SPF-Expander
-author  = Amiri Barksdale <amiri@arisdottle.net>
+author  = Amiri Barksdale <amiri@campusexplorer.com>
 license = Perl_5
 copyright_holder = Amiri Barksdale
 copyright_year   = 2013
