No docs yet, and a race condition when reading file for test, but all working

--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,16 @@ copyright_year   = 2013
 version = 0.001
 
 [@Basic]
+[ReadmeFromPod]
+[InstallGuide]
+[MetaJSON]
+
+[MetaResources]
+repository.url    = git://github.com/amiri/Net-DNS-SPF-Expander.git
+repository.web    = http://github.com/amiri/Net-DNS-SPF-Expander
+repository.type   = git
+bugtracker.web    = https://github.com/amiri/Net-DNS-SPF-Expander/issues
+
+[AutoPrereqs]
+[NextRelease]
+    format = %-9v %{yyyy-MM-dd}d
