--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Amiri Barksdale
 copyright_year   = 2013
 
-version = 0.002
+version = 0.003
 
 [@Basic]
 [ReadmeFromPod]
@@ -20,3 +20,6 @@ bugtracker.web    = https://github.com/amiri/Net-DNS-SPF-Expander/issues
 [AutoPrereqs]
 [NextRelease]
     format = %-9v %{yyyy-MM-dd}d
+
+[ExecDir]
+dir = script
