dzil: add PkgVersion, Git::NextVersion and Git::Tag plugins
Not having a $VERSION in the package definition was causing it to be indexed
in 02packages w/o a version, causing cpanm to believe that no upgrade is
necessary even when an updated dist is available and indexed.

These plugins just add some nice and easy versioning while also allowing for
it to be overridden easily (e.g. "V=1.000 dzil release ...").

--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,15 @@ license = Perl_5
 copyright_holder = Amiri Barksdale
 copyright_year   = 2013
 
-version = 0.010
-
 [@Basic]
 [ReadmeFromPod]
 [InstallGuide]
 [MetaJSON]
+[Git::NextVersion]
+version_regexp = ^([\d\.]+)$
+[Git::Tag]
+tag_format = %v
+[PkgVersion]
 
 [MetaResources]
 repository.url    = git://github.com/amiri/Net-DNS-SPF-Expander.git
